--- a/views/errorPage.ejs
+++ b/views/errorPage.ejs
@@ -10,7 +10,7 @@
 
 <body>
     <%- include ./partials/nav.ejs  %>
-    <p class="pageNotFoundP">Page not found!</p>
+    <p class="pageNotFoundP xs:mt-96 sm:mt-52 lg:mt-32">Page not found!</p>
     <%- include ./partials/footer.ejs  %>
 </body>
 
