--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -739,6 +739,10 @@ video {
   margin-left: 0px;
 }
 
+.mb-40{
+  margin-bottom: 10rem;
+}
+
 .flex{
   display: flex;
 }
@@ -785,6 +789,10 @@ video {
 
 .max-h-index{
   max-height: 40rem;
+}
+
+.min-h-screen{
+  min-height: 100vh;
 }
 
 .w-1\/3{
@@ -1598,6 +1606,14 @@ video {
     margin-bottom: 5rem;
   }
 
+  .xs\:mt-4{
+    margin-top: 1rem;
+  }
+
+  .xs\:mt-96{
+    margin-top: 24rem;
+  }
+
   .xs\:flex{
     display: flex;
   }
@@ -1680,6 +1696,16 @@ video {
     line-height: 1.75rem;
   }
 
+  .xs\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .xs\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
   .xs\:placeholder\:text-sm::-moz-placeholder{
     font-size: 0.875rem;
     line-height: 1.25rem;
@@ -1697,6 +1723,12 @@ video {
 
     .xs\:max-lg\:w-4\/5{
       width: 80%;
+    }
+  }
+
+  @media not all and (min-width: 640px){
+    .xs\:max-sm\:absolute{
+      position: absolute;
     }
   }
 }
@@ -1727,6 +1759,14 @@ video {
 
   .sm\:mt-40{
     margin-top: 10rem;
+  }
+
+  .sm\:mt-10{
+    margin-top: 2.5rem;
+  }
+
+  .sm\:mt-52{
+    margin-top: 13rem;
   }
 
   .sm\:block{
@@ -1773,12 +1813,28 @@ video {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .sm\:grid-cols-8{
+    grid-template-columns: repeat(8, minmax(0, 1fr));
+  }
+
+  .sm\:grid-cols-9{
+    grid-template-columns: repeat(9, minmax(0, 1fr));
+  }
+
   .sm\:flex-row{
     flex-direction: row;
   }
 
+  .sm\:justify-end{
+    justify-content: flex-end;
+  }
+
   .sm\:justify-around{
     justify-content: space-around;
+  }
+
+  .sm\:gap-2{
+    gap: 0.5rem;
   }
 
   .sm\:p-2{
@@ -1793,6 +1849,16 @@ video {
   .sm\:text-lg{
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+
+  .sm\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .sm\:text-xs{
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 
   @media not all and (min-width: 1024px){
@@ -1901,6 +1967,10 @@ video {
     margin-top: 2.5rem;
   }
 
+  .lg\:mt-32{
+    margin-top: 8rem;
+  }
+
   .lg\:block{
     display: block;
   }
@@ -1984,6 +2054,21 @@ video {
   .lg\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .lg\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
 
