--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -574,6 +574,10 @@ video {
   top: 15rem;
 }
 
+.right-20{
+  right: 5rem;
+}
+
 .z-10{
   z-index: 10;
 }
@@ -727,20 +731,16 @@ video {
   margin-top: 2rem;
 }
 
-.ml-20{
-  margin-left: 5rem;
-}
-
-.ml-40{
-  margin-left: 10rem;
-}
-
-.ml-0{
-  margin-left: 0px;
-}
-
 .mb-40{
   margin-bottom: 10rem;
+}
+
+.mb-80{
+  margin-bottom: 20rem;
+}
+
+.mb-96{
+  margin-bottom: 24rem;
 }
 
 .flex{
@@ -783,16 +783,12 @@ video {
   height: 100vh;
 }
 
-.h-singleCarPage{
-  height: 40rem;
+.h-full{
+  height: 100%;
 }
 
 .max-h-index{
   max-height: 40rem;
-}
-
-.min-h-screen{
-  min-height: 100vh;
 }
 
 .w-1\/3{
@@ -805,10 +801,6 @@ video {
 
 .w-12{
   width: 3rem;
-}
-
-.w-2\/3{
-  width: 66.666667%;
 }
 
 .w-24{
@@ -863,8 +855,8 @@ video {
   width: 50rem;
 }
 
-.w-20{
-  width: 5rem;
+.w-2\/3{
+  width: 66.666667%;
 }
 
 .transform{
@@ -897,14 +889,6 @@ video {
   grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
-.grid-cols-8{
-  grid-template-columns: repeat(8, minmax(0, 1fr));
-}
-
-.grid-cols-9{
-  grid-template-columns: repeat(9, minmax(0, 1fr));
-}
-
 .grid-rows-5{
   grid-template-rows: repeat(5, minmax(0, 1fr));
 }
@@ -915,10 +899,6 @@ video {
 
 .flex-col{
   flex-direction: column;
-}
-
-.items-start{
-  align-items: flex-start;
 }
 
 .items-end{
@@ -989,10 +969,6 @@ video {
   gap: 2.25rem;
 }
 
-.justify-self-center{
-  justify-self: center;
-}
-
 .overflow-hidden{
   overflow: hidden;
 }
@@ -1060,11 +1036,6 @@ video {
 
 .fill-primary{
   fill: #969799;
-}
-
-.object-cover{
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
 .p-10{
@@ -1582,6 +1553,10 @@ video {
     margin-bottom: 20rem;
   }
 
+  .xs\:mb-20{
+    margin-bottom: 5rem;
+  }
+
   .xs\:ml-0{
     margin-left: 0px;
   }
@@ -1596,18 +1571,6 @@ video {
 
   .xs\:mt-80{
     margin-top: 20rem;
-  }
-
-  .xs\:mt-60{
-    margin-top: 15rem;
-  }
-
-  .xs\:mb-20{
-    margin-bottom: 5rem;
-  }
-
-  .xs\:mt-4{
-    margin-top: 1rem;
   }
 
   .xs\:mt-96{
@@ -1626,16 +1589,12 @@ video {
     height: 10rem;
   }
 
-  .xs\:h-20{
-    height: 5rem;
-  }
-
-  .xs\:h-80{
-    height: 20rem;
-  }
-
   .xs\:w-1\/2{
     width: 50%;
+  }
+
+  .xs\:w-2\/3{
+    width: 66.666667%;
   }
 
   .xs\:w-40{
@@ -1650,20 +1609,12 @@ video {
     width: 20rem;
   }
 
-  .xs\:w-2\/3{
-    width: 66.666667%;
-  }
-
   .xs\:w-96{
     width: 24rem;
   }
 
   .xs\:w-full{
     width: 100%;
-  }
-
-  .xs\:w-20{
-    width: 5rem;
   }
 
   .xs\:grid-cols-1{
@@ -1682,8 +1633,17 @@ video {
     gap: 1rem;
   }
 
+  .xs\:p-1{
+    padding: 0.25rem;
+  }
+
   .xs\:pt-0{
     padding-top: 0px;
+  }
+
+  .xs\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .xs\:text-sm{
@@ -1694,16 +1654,6 @@ video {
   .xs\:text-xl{
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .xs\:text-2xl{
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
-  .xs\:text-3xl{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
   }
 
   .xs\:placeholder\:text-sm::-moz-placeholder{
@@ -1757,20 +1707,8 @@ video {
     margin-top: 5rem;
   }
 
-  .sm\:mt-40{
-    margin-top: 10rem;
-  }
-
-  .sm\:mt-10{
-    margin-top: 2.5rem;
-  }
-
   .sm\:mt-52{
     margin-top: 13rem;
-  }
-
-  .sm\:block{
-    display: block;
   }
 
   .sm\:flex{
@@ -1785,32 +1723,12 @@ video {
     height: 15rem;
   }
 
-  .sm\:h-productsImg{
-    height: 20rem;
-  }
-
-  .sm\:h-popularCar{
-    height: 40rem;
-  }
-
   .sm\:w-80{
     width: 20rem;
   }
 
   .sm\:w-full{
     width: 100%;
-  }
-
-  .sm\:w-2\/3{
-    width: 66.666667%;
-  }
-
-  .sm\:w-popularCar{
-    width: 50rem;
-  }
-
-  .sm\:grid-cols-3{
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .sm\:grid-cols-8{
@@ -1837,8 +1755,8 @@ video {
     gap: 0.5rem;
   }
 
-  .sm\:p-2{
-    padding: 0.5rem;
+  .sm\:p-4{
+    padding: 1rem;
   }
 
   .sm\:text-2xl{
@@ -1849,11 +1767,6 @@ video {
   .sm\:text-lg{
     font-size: 1.125rem;
     line-height: 1.75rem;
-  }
-
-  .sm\:text-sm{
-    font-size: 0.875rem;
-    line-height: 1.25rem;
   }
 
   .sm\:text-xs{
@@ -1875,16 +1788,8 @@ video {
     margin-bottom: 10rem;
   }
 
-  .md\:mt-0{
-    margin-top: 0px;
-  }
-
   .md\:mt-10{
     margin-top: 2.5rem;
-  }
-
-  .md\:grid{
-    display: grid;
   }
 
   .md\:h-96{
@@ -1895,28 +1800,20 @@ video {
     height: 40rem;
   }
 
-  .md\:w-full{
-    width: 100%;
-  }
-
-  .md\:w-4\/5{
-    width: 80%;
-  }
-
   .md\:w-2\/3{
     width: 66.666667%;
-  }
-
-  .md\:w-popularCar{
-    width: 50rem;
   }
 
   .md\:w-3\/4{
     width: 75%;
   }
 
-  .md\:grid-cols-5{
-    grid-template-columns: repeat(5, minmax(0, 1fr));
+  .md\:w-full{
+    width: 100%;
+  }
+
+  .md\:w-popularCar{
+    width: 50rem;
   }
 
   .md\:flex-row{
@@ -1971,6 +1868,14 @@ video {
     margin-top: 8rem;
   }
 
+  .lg\:mt-20{
+    margin-top: 5rem;
+  }
+
+  .lg\:mt-40{
+    margin-top: 10rem;
+  }
+
   .lg\:block{
     display: block;
   }
@@ -1995,6 +1900,10 @@ video {
     height: 20rem;
   }
 
+  .lg\:w-3\/4{
+    width: 75%;
+  }
+
   .lg\:w-96{
     width: 24rem;
   }
@@ -2009,18 +1918,6 @@ video {
 
   .lg\:w-productsImg{
     width: 25rem;
-  }
-
-  .lg\:w-3\/4{
-    width: 75%;
-  }
-
-  .lg\:w-2\/3{
-    width: 66.666667%;
-  }
-
-  .lg\:w-4\/5{
-    width: 80%;
   }
 
   .lg\:grid-cols-2{
@@ -2039,21 +1936,35 @@ video {
     flex-direction: column;
   }
 
-  .lg\:justify-end{
-    justify-content: flex-end;
-  }
-
   .lg\:justify-between{
     justify-content: space-between;
+  }
+
+  .lg\:px-5{
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
   }
 
   .lg\:pt-10{
     padding-top: 2.5rem;
   }
 
+  .lg\:pl-5{
+    padding-left: 1.25rem;
+  }
+
+  .lg\:pt-5{
+    padding-top: 1.25rem;
+  }
+
   .lg\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .lg\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 
   .lg\:text-xl{
@@ -2064,11 +1975,6 @@ video {
   .lg\:text-lg{
     font-size: 1.125rem;
     line-height: 1.75rem;
-  }
-
-  .lg\:text-base{
-    font-size: 1rem;
-    line-height: 1.5rem;
   }
 }
 
