--- a/views/products.ejs
+++ b/views/products.ejs
@@ -6,13 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DriftDreams</title>
     <link rel="stylesheet" href="/styles/output.css">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-    </style>
 </head>
 
 <body>
@@ -21,9 +14,9 @@
     font-bodyFont">
         <h2 class="flex justify-center text-3xl tracking-wider">All products</h2>
         <div class="flex xs:flex-col
-        items-center lg:flex-row relative mb-24 lg:mt-10">
-            <form class="flex flex-col items-center mb-10 w-full lg:w-96" action="/products" method="post"
-                id="combinedForm">
+        items-center lg:flex-row relative lg:mt-40">
+            <form class="flex flex-col items-center w-full mb-96
+            lg:w-96" action="/products" method="post" id="combinedForm">
                 <div class=" mt-20
                 sm:w-full">
                     <%- include ./partials/filterComponent %>
@@ -41,29 +34,31 @@
                 </div>
             </form>
             <!-- Div za sve produkte -->
-            <div class="grid gap-20 lg:pt-10
+            <div class="grid gap-20 lg:pt-10 mb-20
             xs:grid-cols-1 xs:pt-0 lg:grid-cols-2 2xl:grid-cols-3
             lg:mr-10 relative w-full">
-                <p class="text-primary absolute top-0 right-10
+                <p class="text-primary absolute top-0 right-20
                 xs:hidden lg:block">
                     Items found: <span><%= countDocuments  %></span>
                 </p>
                 <% if (products && products.length > 0) { %>
                 <% products.forEach(car =>{ %>
                 <a href="/products/<%= car._id  %>">
-                    <div class="text-sm">
+                    <div class="text-sm lg:text-base lg:w-productsImg">
                         <div class="overflow-hidden">
-                            <img class="rounded-tr-lg rounded-tl-lg lg:w-productsImg
+                            <img class="rounded-tr-lg rounded-tl-lg
                             lg:h-productsImg
                             hover:scale-125 hover:transform duration-700" src="/img/<%= car.model %>.jpg"
                                 alt="<%= car.model  %>">
                         </div>
-                        <div class="px-4 font-bodyFont shadow-2xl">
-                            <p class="pt-2 pl-2 ">
+                        <div class="px-4 font-bodyFont shadow-2xl
+                        xs:p-1 sm:p-4">
+                            <p class="pt-2 pl-2 
+                            lg:pt-5 lg:pl-5">
                                 <span><%= car.brand.name %></span>
                                 <span><%= car.model  %></span>
                             </p>
-                            <div class="flex justify-between px-2">
+                            <div class="flex justify-between px-2 lg:px-5">
                                 <p class="text-primary"><%= car.year %></p>
                                 <p class="font-bold">
                                     <%= car.price + "$"%>
