--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -787,6 +787,10 @@ video {
   height: 100%;
 }
 
+.h-80{
+  height: 20rem;
+}
+
 .max-h-index{
   max-height: 40rem;
 }
@@ -1130,6 +1134,10 @@ video {
 
 .pt-2{
   padding-top: 0.5rem;
+}
+
+.pb-20{
+  padding-bottom: 5rem;
 }
 
 .text-start{
@@ -1597,6 +1605,14 @@ video {
     height: 10rem;
   }
 
+  .xs\:h-auto{
+    height: auto;
+  }
+
+  .xs\:h-80{
+    height: 20rem;
+  }
+
   .xs\:w-1\/2{
     width: 50%;
   }
@@ -1633,6 +1649,14 @@ video {
     flex-direction: column;
   }
 
+  .xs\:items-center{
+    align-items: center;
+  }
+
+  .xs\:justify-center{
+    justify-content: center;
+  }
+
   .xs\:gap-10{
     gap: 2.5rem;
   }
@@ -1641,8 +1665,16 @@ video {
     gap: 1rem;
   }
 
+  .xs\:gap-5{
+    gap: 1.25rem;
+  }
+
   .xs\:p-1{
     padding: 0.25rem;
+  }
+
+  .xs\:p-3{
+    padding: 0.75rem;
   }
 
   .xs\:pt-0{
@@ -1674,29 +1706,93 @@ video {
     line-height: 1.25rem;
   }
 
+  @media not all and (min-width: 1536px){
+    .xs\:max-2xl\:flex{
+      display: flex;
+    }
+  }
+
+  @media not all and (min-width: 1280px){
+    .xs\:max-xl\:flex{
+      display: flex;
+    }
+
+    .xs\:max-xl\:flex-col{
+      flex-direction: column;
+    }
+
+    .xs\:max-xl\:justify-center{
+      justify-content: center;
+    }
+
+    .xs\:max-xl\:gap-5{
+      gap: 1.25rem;
+    }
+  }
+
   @media not all and (min-width: 1024px){
     .xs\:max-lg\:mt-72{
       margin-top: 18rem;
+    }
+
+    .xs\:max-lg\:flex{
+      display: flex;
     }
 
     .xs\:max-lg\:w-4\/5{
       width: 80%;
     }
 
+    .xs\:max-lg\:flex-col{
+      flex-direction: column;
+    }
+
     .xs\:max-lg\:items-center{
       align-items: center;
+    }
+
+    .xs\:max-lg\:justify-center{
+      justify-content: center;
+    }
+
+    .xs\:max-lg\:gap-5{
+      gap: 1.25rem;
     }
   }
 
   @media not all and (min-width: 768px){
+    .xs\:max-md\:flex{
+      display: flex;
+    }
+
+    .xs\:max-md\:flex-col{
+      flex-direction: column;
+    }
+
     .xs\:max-md\:items-center{
       align-items: center;
+    }
+
+    .xs\:max-md\:justify-center{
+      justify-content: center;
+    }
+
+    .xs\:max-md\:gap-5{
+      gap: 1.25rem;
     }
   }
 
   @media not all and (min-width: 640px){
     .xs\:max-sm\:absolute{
       position: absolute;
+    }
+
+    .xs\:max-sm\:flex{
+      display: flex;
+    }
+
+    .xs\:max-sm\:justify-center{
+      justify-content: center;
     }
   }
 }
@@ -1903,6 +1999,10 @@ video {
     display: block;
   }
 
+  .lg\:flex{
+    display: flex;
+  }
+
   .lg\:grid{
     display: grid;
   }
@@ -1943,12 +2043,24 @@ video {
     width: 25rem;
   }
 
+  .lg\:w-editPageProducts{
+    width: 80rem;
+  }
+
+  .lg\:w-52{
+    width: 13rem;
+  }
+
   .lg\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:grid-cols-5{
     grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-12{
+    grid-template-columns: repeat(12, minmax(0, 1fr));
   }
 
   .lg\:flex-row{
@@ -1959,8 +2071,28 @@ video {
     flex-direction: column;
   }
 
+  .lg\:items-start{
+    align-items: flex-start;
+  }
+
+  .lg\:items-center{
+    align-items: center;
+  }
+
+  .lg\:justify-center{
+    justify-content: center;
+  }
+
   .lg\:justify-between{
     justify-content: space-between;
+  }
+
+  .lg\:gap-0{
+    gap: 0px;
+  }
+
+  .lg\:p-5{
+    padding: 1.25rem;
   }
 
   .lg\:px-5{
@@ -2002,13 +2134,79 @@ video {
 }
 
 @media (min-width: 1280px){
+  .xl\:grid{
+    display: grid;
+  }
+
+  .xl\:w-editPageProducts{
+    width: 80rem;
+  }
+
+  .xl\:w-52{
+    width: 13rem;
+  }
+
+  .xl\:grid-cols-12{
+    grid-template-columns: repeat(12, minmax(0, 1fr));
+  }
+
   .xl\:flex-row{
     flex-direction: row;
+  }
+
+  .xl\:p-5{
+    padding: 1.25rem;
+  }
+
+  .xl\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
 
 @media (min-width: 1536px){
+  .\32xl\:flex{
+    display: flex;
+  }
+
+  .\32xl\:grid{
+    display: grid;
+  }
+
+  .\32xl\:h-80{
+    height: 20rem;
+  }
+
+  .\32xl\:w-52{
+    width: 13rem;
+  }
+
   .\32xl\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .\32xl\:grid-cols-12{
+    grid-template-columns: repeat(12, minmax(0, 1fr));
+  }
+
+  .\32xl\:flex-col{
+    flex-direction: column;
+  }
+
+  .\32xl\:items-center{
+    align-items: center;
+  }
+
+  .\32xl\:justify-center{
+    justify-content: center;
+  }
+
+  .\32xl\:p-5{
+    padding: 1.25rem;
+  }
+
+  .\32xl\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
