--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -558,8 +558,8 @@ video {
   right: 0px;
 }
 
-.right-10{
-  right: 2.5rem;
+.right-20{
+  right: 5rem;
 }
 
 .top-0{
@@ -574,8 +574,12 @@ video {
   top: 15rem;
 }
 
-.right-20{
-  right: 5rem;
+.left-20{
+  left: 5rem;
+}
+
+.left-10{
+  left: 2.5rem;
 }
 
 .z-10{
@@ -606,8 +610,12 @@ video {
   grid-row: span 5 / span 5;
 }
 
-.m-14{
-  margin: 3.5rem;
+.m-12{
+  margin: 3rem;
+}
+
+.m-16{
+  margin: 4rem;
 }
 
 .mx-1{
@@ -655,16 +663,8 @@ video {
   margin-bottom: 16rem;
 }
 
-.mb-10{
-  margin-bottom: 2.5rem;
-}
-
 .mb-20{
   margin-bottom: 5rem;
-}
-
-.mb-24{
-  margin-bottom: 6rem;
 }
 
 .mb-48{
@@ -681,6 +681,10 @@ video {
 
 .mb-9{
   margin-bottom: 2.25rem;
+}
+
+.mb-96{
+  margin-bottom: 24rem;
 }
 
 .ml-2{
@@ -731,18 +735,6 @@ video {
   margin-top: 2rem;
 }
 
-.mb-40{
-  margin-bottom: 10rem;
-}
-
-.mb-80{
-  margin-bottom: 20rem;
-}
-
-.mb-96{
-  margin-bottom: 24rem;
-}
-
 .flex{
   display: flex;
 }
@@ -783,20 +775,8 @@ video {
   height: 100vh;
 }
 
-.h-full{
-  height: 100%;
-}
-
-.h-80{
-  height: 20rem;
-}
-
 .max-h-index{
   max-height: 40rem;
-}
-
-.w-1\/3{
-  width: 33.333333%;
 }
 
 .w-10{
@@ -805,6 +785,10 @@ video {
 
 .w-12{
   width: 3rem;
+}
+
+.w-2\/3{
+  width: 66.666667%;
 }
 
 .w-24{
@@ -843,10 +827,6 @@ video {
   width: 18rem;
 }
 
-.w-editPageProducts{
-  width: 80rem;
-}
-
 .w-full{
   width: 100%;
 }
@@ -857,10 +837,6 @@ video {
 
 .w-singleCarPage{
   width: 50rem;
-}
-
-.w-2\/3{
-  width: 66.666667%;
 }
 
 .transform{
@@ -877,10 +853,6 @@ video {
 
 .resize-x{
   resize: horizontal;
-}
-
-.resize{
-  resize: both;
 }
 
 .appearance-none{
@@ -953,10 +925,6 @@ video {
   gap: 0.75rem;
 }
 
-.gap-32{
-  gap: 8rem;
-}
-
 .gap-4{
   gap: 1rem;
 }
@@ -983,10 +951,6 @@ video {
 
 .overflow-hidden{
   overflow: hidden;
-}
-
-.whitespace-normal{
-  white-space: normal;
 }
 
 .text-nowrap{
@@ -1080,11 +1044,6 @@ video {
   padding-right: 0.5rem;
 }
 
-.px-32{
-  padding-left: 8rem;
-  padding-right: 8rem;
-}
-
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1134,10 +1093,6 @@ video {
 
 .pt-2{
   padding-top: 0.5rem;
-}
-
-.pb-20{
-  padding-bottom: 5rem;
 }
 
 .text-start{
@@ -1507,10 +1462,36 @@ video {
   }
 }
 
+.signInInput{
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(150 151 153 / var(--tw-border-opacity));
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+@media (min-width: 320px){
+  .signInInput{
+    width: 66.666667%;
+  }
+}
+
+@media (min-width: 1024px){
+  .signInInput{
+    width: 100%;
+  }
+}
+
 @media screen and (min-width: 320px){
   .video {
     width: calc(100% - 2rem);
     margin: auto;
+  }
+
+  .signUpMainDiv {
+    height: 95%
   }
 }
 
@@ -1593,6 +1574,10 @@ video {
     margin-top: 24rem;
   }
 
+  .xs\:mb-10{
+    margin-bottom: 2.5rem;
+  }
+
   .xs\:flex{
     display: flex;
   }
@@ -1605,16 +1590,8 @@ video {
     height: 10rem;
   }
 
-  .xs\:h-auto{
-    height: auto;
-  }
-
-  .xs\:h-80{
-    height: 20rem;
-  }
-
-  .xs\:w-1\/2{
-    width: 50%;
+  .xs\:w-10\/12{
+    width: 83.333333%;
   }
 
   .xs\:w-2\/3{
@@ -1627,6 +1604,10 @@ video {
 
   .xs\:w-60{
     width: 15rem;
+  }
+
+  .xs\:w-8{
+    width: 2rem;
   }
 
   .xs\:w-80{
@@ -1653,12 +1634,12 @@ video {
     align-items: center;
   }
 
-  .xs\:justify-center{
-    justify-content: center;
-  }
-
   .xs\:gap-10{
     gap: 2.5rem;
+  }
+
+  .xs\:gap-20{
+    gap: 5rem;
   }
 
   .xs\:gap-4{
@@ -1706,30 +1687,6 @@ video {
     line-height: 1.25rem;
   }
 
-  @media not all and (min-width: 1536px){
-    .xs\:max-2xl\:flex{
-      display: flex;
-    }
-  }
-
-  @media not all and (min-width: 1280px){
-    .xs\:max-xl\:flex{
-      display: flex;
-    }
-
-    .xs\:max-xl\:flex-col{
-      flex-direction: column;
-    }
-
-    .xs\:max-xl\:justify-center{
-      justify-content: center;
-    }
-
-    .xs\:max-xl\:gap-5{
-      gap: 1.25rem;
-    }
-  }
-
   @media not all and (min-width: 1024px){
     .xs\:max-lg\:mt-72{
       margin-top: 18rem;
@@ -1743,20 +1700,12 @@ video {
       width: 80%;
     }
 
-    .xs\:max-lg\:flex-col{
-      flex-direction: column;
-    }
-
     .xs\:max-lg\:items-center{
       align-items: center;
     }
 
-    .xs\:max-lg\:justify-center{
-      justify-content: center;
-    }
-
-    .xs\:max-lg\:gap-5{
-      gap: 1.25rem;
+    .xs\:max-lg\:pl-10{
+      padding-left: 2.5rem;
     }
   }
 
@@ -1769,14 +1718,6 @@ video {
       flex-direction: column;
     }
 
-    .xs\:max-md\:items-center{
-      align-items: center;
-    }
-
-    .xs\:max-md\:justify-center{
-      justify-content: center;
-    }
-
     .xs\:max-md\:gap-5{
       gap: 1.25rem;
     }
@@ -1785,14 +1726,6 @@ video {
   @media not all and (min-width: 640px){
     .xs\:max-sm\:absolute{
       position: absolute;
-    }
-
-    .xs\:max-sm\:flex{
-      display: flex;
-    }
-
-    .xs\:max-sm\:justify-center{
-      justify-content: center;
     }
   }
 }
@@ -1956,6 +1889,11 @@ video {
 }
 
 @media (min-width: 1024px){
+  .lg\:mx-0{
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
   .lg\:mx-24{
     margin-left: 6rem;
     margin-right: 6rem;
@@ -1966,11 +1904,6 @@ video {
     margin-bottom: 5rem;
   }
 
-  .lg\:mx-0{
-    margin-left: 0px;
-    margin-right: 0px;
-  }
-
   .lg\:mr-10{
     margin-right: 2.5rem;
   }
@@ -1979,28 +1912,32 @@ video {
     margin-top: 0px;
   }
 
-  .lg\:mt-10{
-    margin-top: 2.5rem;
-  }
-
   .lg\:mt-32{
     margin-top: 8rem;
-  }
-
-  .lg\:mt-20{
-    margin-top: 5rem;
   }
 
   .lg\:mt-40{
     margin-top: 10rem;
   }
 
-  .lg\:block{
-    display: block;
+  .lg\:mb-96{
+    margin-bottom: 24rem;
   }
 
-  .lg\:flex{
-    display: flex;
+  .lg\:mb-40{
+    margin-bottom: 10rem;
+  }
+
+  .lg\:mb-60{
+    margin-bottom: 15rem;
+  }
+
+  .lg\:mb-32{
+    margin-bottom: 8rem;
+  }
+
+  .lg\:block{
+    display: block;
   }
 
   .lg\:grid{
@@ -2023,8 +1960,20 @@ video {
     height: 20rem;
   }
 
+  .lg\:w-16{
+    width: 4rem;
+  }
+
+  .lg\:w-2\/3{
+    width: 66.666667%;
+  }
+
   .lg\:w-3\/4{
     width: 75%;
+  }
+
+  .lg\:w-72{
+    width: 18rem;
   }
 
   .lg\:w-96{
@@ -2043,24 +1992,12 @@ video {
     width: 25rem;
   }
 
-  .lg\:w-editPageProducts{
-    width: 80rem;
-  }
-
-  .lg\:w-52{
-    width: 13rem;
-  }
-
   .lg\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:grid-cols-5{
     grid-template-columns: repeat(5, minmax(0, 1fr));
-  }
-
-  .lg\:grid-cols-12{
-    grid-template-columns: repeat(12, minmax(0, 1fr));
   }
 
   .lg\:flex-row{
@@ -2071,28 +2008,8 @@ video {
     flex-direction: column;
   }
 
-  .lg\:items-start{
-    align-items: flex-start;
-  }
-
-  .lg\:items-center{
-    align-items: center;
-  }
-
-  .lg\:justify-center{
-    justify-content: center;
-  }
-
   .lg\:justify-between{
     justify-content: space-between;
-  }
-
-  .lg\:gap-0{
-    gap: 0px;
-  }
-
-  .lg\:p-5{
-    padding: 1.25rem;
   }
 
   .lg\:px-5{
@@ -2100,12 +2017,12 @@ video {
     padding-right: 1.25rem;
   }
 
-  .lg\:pt-10{
-    padding-top: 2.5rem;
-  }
-
   .lg\:pl-5{
     padding-left: 1.25rem;
+  }
+
+  .lg\:pt-10{
+    padding-top: 2.5rem;
   }
 
   .lg\:pt-5{
@@ -2122,40 +2039,24 @@ video {
     line-height: 1.5rem;
   }
 
-  .lg\:text-xl{
-    font-size: 1.25rem;
+  .lg\:text-lg{
+    font-size: 1.125rem;
     line-height: 1.75rem;
   }
 
-  .lg\:text-lg{
-    font-size: 1.125rem;
+  .lg\:text-xl{
+    font-size: 1.25rem;
     line-height: 1.75rem;
   }
 }
 
 @media (min-width: 1280px){
-  .xl\:grid{
-    display: grid;
-  }
-
-  .xl\:w-editPageProducts{
-    width: 80rem;
-  }
-
-  .xl\:w-52{
-    width: 13rem;
-  }
-
-  .xl\:grid-cols-12{
-    grid-template-columns: repeat(12, minmax(0, 1fr));
+  .xl\:w-1\/3{
+    width: 33.333333%;
   }
 
   .xl\:flex-row{
     flex-direction: row;
-  }
-
-  .xl\:p-5{
-    padding: 1.25rem;
   }
 
   .xl\:text-sm{
@@ -2181,12 +2082,12 @@ video {
     width: 13rem;
   }
 
-  .\32xl\:grid-cols-3{
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
   .\32xl\:grid-cols-12{
     grid-template-columns: repeat(12, minmax(0, 1fr));
+  }
+
+  .\32xl\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .\32xl\:flex-col{
