--- a/views/products.ejs
+++ b/views/products.ejs
@@ -15,16 +15,12 @@
         <h2 class="flex justify-center text-3xl tracking-wider">All products</h2>
         <div class="flex xs:flex-col
         items-center lg:flex-row relative lg:mt-40">
-            <form class="flex flex-col items-center w-full mb-96
+            <form class="flex flex-col items-center w-full xs:mb-10 lg:mb-32
             lg:w-96" action="/products" method="post" id="combinedForm">
                 <div class=" mt-20
                 sm:w-full">
                     <%- include ./partials/filterComponent %>
                 </div>
-                <p class="absolute top-60 text-primary
-                xs:hidden">
-                    Items found: <span><%= countDocuments  %></span>
-                </p>
                 <div class="flex gap-5 justify-between items-end 
                 xs:max-lg:w-4/5 ">
                     <%- include ./partials/sortComponent  %>
@@ -37,7 +33,7 @@
             <div class="grid gap-20 lg:pt-10 mb-20
             xs:grid-cols-1 xs:pt-0 lg:grid-cols-2 2xl:grid-cols-3
             lg:mr-10 relative w-full">
-                <p class="text-primary absolute top-0 right-20
+                <p class="text-primary absolute top-0 left-10
                 xs:hidden lg:block">
                     Items found: <span><%= countDocuments  %></span>
                 </p>
