--- a/views/products.ejs
+++ b/views/products.ejs
@@ -10,12 +10,11 @@
 
 <body>
     <%- include ./partials/nav.ejs  %>
-    <section class="xs:mt-72 sm:mt-20 lg:mt-0  
+    <section class="xs:mt-72 sm:mt-20 lg:mt-0 mb-60
     font-bodyFont">
         <h2 class="flex justify-center text-3xl tracking-wider">All products</h2>
-        <div class="flex xs:flex-col
-        items-center lg:flex-row relative lg:mt-40">
-            <form class="flex flex-col items-center w-full xs:mb-10 lg:mb-32
+        <div class="flex xs:flex-col lg:flex-row relative lg:mt-40">
+            <form class="flex flex-col items-center w-full xs:max-lg:mb-10
             lg:w-96" action="/products" method="post" id="combinedForm">
                 <div class=" mt-20
                 sm:w-full">
@@ -30,7 +29,7 @@
                 </div>
             </form>
             <!-- Div za sve produkte -->
-            <div class="grid gap-20 lg:pt-10 mb-20
+            <div class="grid gap-20 lg:pt-10
             xs:grid-cols-1 xs:pt-0 lg:grid-cols-2 2xl:grid-cols-3
             lg:mr-10 relative w-full">
                 <p class="text-primary absolute top-0 left-10
