--- a/views/signIn.ejs
+++ b/views/signIn.ejs
@@ -10,16 +10,16 @@
 
 <body>
     <div class="h-screen bg-black font-bodyFont grid grid-rows-5">
-        <div class="justify-center m-16  xs:max-lg:flex lg:w-72">
+        <div class="justify-center xs:m-12 sm:m-12 xs:max-lg:flex lg:w-72">
             <a class="btn bg-white text-black
             flex items-center justify-center" href="/">
                 Go back to home page
             </a>
         </div>
-        <div class="flex flex-col items-center bg-white 
+        <div class="signUpMainDiv flex flex-col items-center bg-white 
         h-4/5 pt-10 row-span-4 pb-40 mx-auto rounded-xl
         xs:w-10/12 lg:w-2/3 xl:w-1/3 xs:gap-20">
-            <h2 class="text-4xl underline tracking-wider">Sign in</h2>
+            <h2 class="xs:text-2xl sm:text-4xl underline tracking-wider">Sign in</h2>
             <form class="flex flex-col gap-10 items-center relative" action="" method="post">
                 <div class="flex flex-col gap-5">
                     <section class="flex xs:max-lg:items-center gap-2 
@@ -49,7 +49,7 @@
                     <% } %>
                     <div class="flex flex-col gap-5">
                         <button class="btn bg-black text-white w-48 mx-auto" type="submit">Sign in</button>
-                        <p class="text-primary w-2/3 mx-auto">If you don't have an account, sign up
+                        <p class="text-primary w-2/3 lg:w-full mx-auto">If you don't have an account, sign up
                             below!</p>
                         <a class="btn bg-black text-white w-48 mx-auto flex justify-center" href="/signup">
                             Sign up
