--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -20,17 +20,18 @@
 
     <body>
         <div class="h-screen bg-black font-bodyFont grid grid-rows-6">
-            <div class="justify-center m-12 xs:max-lg:flex lg:w-72">
+            <div class="justify-center xs:m-10 sm:m-12 xs:max-lg:flex lg:w-72">
                 <a class="btn bg-white text-black
                 flex items-center justify-center" href="/">
                     Go back to home page
                 </a>
             </div>
             <div class="row-span-5">
-                <div class="signUpMainDiv flex flex-col items-center bg-white 
-                pt-10 row-span-4 pb-40 mx-auto rounded-xl
+                <div class="signUpMainDiv 
+                flex flex-col items-center bg-white 
+                pt-10 row-span-4 mx-auto rounded-xl
                 xs:w-10/12 lg:w-2/3 xl:w-1/3 xs:gap-20">
-                    <h2 class="text-4xl underline tracking-wider flex justify-center">Sign up</h2>
+                    <h2 class="xs:text-2xl sm:text-4xl underline tracking-wider flex justify-center">Sign up</h2>
                     <form class="flex flex-col items-center gap-10" action="" method="post">
                         <div class="flex flex-col gap-5">
                             <div class="flex flex-col gap-10">
@@ -71,9 +72,9 @@
                             <p class="flex justify-center px-5"><%= messages.error[0]  %></p>
                             <% } %>
                         </div>
-                        <section class="flex flex-col w-2/3 items-center gap-5">
+                        <section class="flex flex-col items-center gap-5">
                             <button class="btn bg-black text-white w-48 mx-auto" type="submit">Sign up</button>
-                            <p class="text-primary mx-auto
+                            <p class="text-primary mx-auto w-2/3 lg:w-full
                             flex justify-center">Or, if you already have an account, sign in below!</p>
                             <a class="btn bg-black text-white w-48 mx-auto flex justify-center" href="/signin">
                                 Sign in
