--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -1597,6 +1597,14 @@ video {
     width: 100%;
   }
 
+  .xs\:w-1\/3{
+    width: 33.333333%;
+  }
+
+  .xs\:w-3\/4{
+    width: 75%;
+  }
+
   .xs\:grid-cols-1{
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
@@ -1667,6 +1675,12 @@ video {
     line-height: 1.25rem;
   }
 
+  @media not all and (min-width: 1280px){
+    .xs\:max-xl\:items-center{
+      align-items: center;
+    }
+  }
+
   @media not all and (min-width: 1024px){
     .xs\:max-lg\:mb-10{
       margin-bottom: 2.5rem;
@@ -1702,6 +1716,10 @@ video {
       flex-direction: column;
     }
 
+    .xs\:max-md\:items-center{
+      align-items: center;
+    }
+
     .xs\:max-md\:gap-5{
       gap: 1.25rem;
     }
@@ -1710,6 +1728,10 @@ video {
   @media not all and (min-width: 640px){
     .xs\:max-sm\:absolute{
       position: absolute;
+    }
+
+    .xs\:max-sm\:items-center{
+      align-items: center;
     }
   }
 }
@@ -1858,6 +1880,10 @@ video {
 
   .md\:w-popularCar{
     width: 50rem;
+  }
+
+  .md\:w-1\/3{
+    width: 33.333333%;
   }
 
   .md\:flex-row{
