--- a/views/partials/filterComponent.ejs
+++ b/views/partials/filterComponent.ejs
@@ -2,6 +2,7 @@
 <div class="mt-10 flex
     xs:flex-col sm:flex-row lg:flex-col
     sm:justify-around sm:mx-20">
+    <!-- Brands checkbox div -->
     <div class="flex flex-col gap-5">
         <p class="flex justify-center text-xl">Brand:</p>
         <div class="flex flex-col gap-2">
@@ -15,6 +16,7 @@
             <% }) %>
         </div>
     </div>
+    <!-- Range input div -->
     <div class="flex flex-col gap-2 justify-center mt-10 p-3">
         <p>Range of price:</p>
         <div class="relative w-52">
