--- a/views/partials/mostPopularItem.ejs
+++ b/views/partials/mostPopularItem.ejs
@@ -1,3 +1,4 @@
+<!-- Component for most popular item on index page -->
 <div class="flex flex-col items-center font-bodyFont">
     <h2 class="text-2xl underline">Car of the week:</h2>
     <% if (popularCar) { %>
