--- a/views/newBrand.ejs
+++ b/views/newBrand.ejs
@@ -10,6 +10,7 @@
 
 <body>
     <%- include ./partials/nav.ejs  %>
+    <!-- If ADMIN is logged in -->
     <% if(currentUser && currentUser.username === "admin") { %>
     <h3 class="flex justify-center text-3xl font-bodyFont
         xs:mt-80 sm:mt-20">Add new brand</h3>
@@ -47,6 +48,7 @@
         </div>
         <button class="btn bg-black text-white my-20">Add brand</button>
     </form>
+    <!-- If admin is not logged in -->
     <% } else { %>
     <p class="pageNotFoundP">Page not found!</p>
     <% } %>
