--- a/views/partials/imageSliderIndex.ejs
+++ b/views/partials/imageSliderIndex.ejs
@@ -1,4 +1,5 @@
 <div>
+    <!-- If there are images avaliable -->
     <% if(imgSliderCars.length > 0) { %>
     <% imgSliderCars.forEach(car => { %>
     <a href="/products/<%= car._id  %>">
@@ -22,6 +23,7 @@
         </div>
     </a>
     <% }); %>
+    <!-- Message for admin when DB is empty -->
     <% } else { %>
     <p class="font-bodyFont text-xl">Database is empty.
         When you add some cars in it, slideshow of first 5 cars will
