--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,3 +1,4 @@
+<!-- Header component, used on every page -->
 <nav class="xs:flex-col lg:flex-row flex 
 h-36 items-center lg:justify-between xs:mx-5 lg:mx-24">
     <h1 class="font-bodyFont font-bold text-3xl 
@@ -26,6 +27,7 @@ h-36 items-center lg:justify-between xs:mx-5 lg:mx-24">
                 <% } %>
             </a>
         </li>
+        <!-- If there is user that is logged in -->
         <% if(currentUser){ %>
         <li class="relative flex justify-center items-center mb-9 sm:ml-8
         xs:ml-0">
@@ -49,7 +51,7 @@ h-36 items-center lg:justify-between xs:mx-5 lg:mx-24">
                     z-10">
                     <h3 class="text-2xl font-bold"><%= currentUser.username  %></h3>
                     <ul class="flex flex-col items-center gap-2 text-primary">
-                        <!-- Kada je USER Admin -->
+                        <!-- When the user is ADMIN -->
                         <% if(currentUser.username === "admin") { %>
                         <li class="hover:font-bold cursor-pointer ">
                             <a href="/newCar">Add new car</a>
@@ -58,7 +60,7 @@ h-36 items-center lg:justify-between xs:mx-5 lg:mx-24">
                             <a href="/newBrand">Add new brand</a>
                         </li>
                         <li class="hover:font-bold cursor-pointer">
-                            <a href="/editCars">Edit cars</a>
+                            <a href="/ Kada je USER korisnikeditCars">Edit cars</a>
                         </li>
                         <li class="hover:font-bold cursor-pointer text-nowrap">
                             <a href="/allOrders">View pending orders</a>
@@ -66,7 +68,7 @@ h-36 items-center lg:justify-between xs:mx-5 lg:mx-24">
                         <li class="hover:font-bold cursor-pointer">
                             <a href="/signout">Sign out</a>
                         </li>
-                        <!-- Kada je USER korisnik -->
+                        <!-- When an user is not admin -->
                         <% } else { %>
                         <li class="cursor-pointer hover:font-bold hover:text-nowrap">
                             <a href="/myOrders">My previous orders</a>
