--- a/views/partials/reviews.ejs
+++ b/views/partials/reviews.ejs
@@ -2,6 +2,7 @@
     <h3 class="text-2xl font-bodyFont">Hot reviews: </h3>
     <div class="flex xs:flex-col lg:flex-row justify-center w-4/5
     gap-10 mx-5">
+        <!-- Video is a class that is responsible for media queries(responsive design) -->
         <iframe class="video lg:h-96" src="https://www.youtube.com/embed/_ALtBbXcyXc?si=Z7ySssrhuO5soaRS"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
