--- a/views/products.ejs
+++ b/views/products.ejs
@@ -13,6 +13,7 @@
     <section class="xs:mt-72 sm:mt-20 lg:mt-0 mb-60
     font-bodyFont">
         <h2 class="flex justify-center text-3xl tracking-wider">All products</h2>
+        <!-- Div for sorting and filtering products -->
         <div class="flex xs:flex-col lg:flex-row relative lg:mt-40">
             <form class="flex flex-col items-center w-full xs:max-lg:mb-10
             lg:w-96" action="/products" method="post" id="combinedForm">
@@ -28,7 +29,7 @@
                     </p>
                 </div>
             </form>
-            <!-- Div za sve produkte -->
+            <!-- Div for ALL PRODUCTS -->
             <div class="grid gap-20 lg:pt-10
             xs:grid-cols-1 xs:pt-0 lg:grid-cols-2 2xl:grid-cols-3
             lg:mr-10 relative w-full">
@@ -36,6 +37,7 @@
                 xs:hidden lg:block">
                     Items found: <span><%= countDocuments  %></span>
                 </p>
+                <!-- If there are products -->
                 <% if (products && products.length > 0) { %>
                 <% products.forEach(car =>{ %>
                 <a href="/products/<%= car._id  %>">
@@ -63,6 +65,7 @@
                     </div>
                 </a>
                 <% }) %>
+                <!-- Case when there are no products -->
                 <% } else { %>
                 <div class="mt-20 col-span-3 flex justify-center">
                     <p class="font-bold text-2xl">NOT FOUND</p>
