--- a/views/signIn.ejs
+++ b/views/signIn.ejs
@@ -21,6 +21,7 @@
         xs:w-10/12 lg:w-2/3 xl:w-1/3 xs:gap-20">
             <h2 class="xs:text-2xl sm:text-4xl underline tracking-wider">Sign in</h2>
             <form class="flex flex-col gap-10 items-center relative" action="" method="post">
+                <!-- Inputs for username and password -->
                 <div class="flex flex-col gap-5">
                     <section class="flex xs:max-lg:items-center gap-2 
                     xs:max-lg:pl-10">
@@ -44,6 +45,7 @@
                     </section>
                 </div>
                 <section class="flex justify-center">
+                    <!-- Displaying flash message if there is one -->
                     <% if(message) { %>
                     <p class="font-bold absolute top-32 text-xl tracking-wider"><%= message  %></p>
                     <% } %>
