--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -33,6 +33,7 @@
                 xs:w-10/12 lg:w-2/3 xl:w-1/3 xs:gap-20">
                     <h2 class="xs:text-2xl sm:text-4xl underline tracking-wider flex justify-center">Sign up</h2>
                     <form class="flex flex-col items-center gap-10" action="" method="post">
+                        <!-- Div for username and password -->
                         <div class="flex flex-col gap-5">
                             <div class="flex flex-col gap-10">
                                 <section class="flex gap-2 xs:max-lg:items-center 
@@ -68,6 +69,7 @@
                                         name="repeatedPassword" type="text" autocomplete="current-password" required>
                                 </section>
                             </div>
+                            <!-- Displaying flash message if there is one -->
                             <% if(messages.error && messages.error.length > 0){ %>
                             <p class="flex justify-center px-5"><%= messages.error[0]  %></p>
                             <% } %>
