Fixed typo in nav.ejs

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -60,7 +60,7 @@ h-36 items-center lg:justify-between xs:mx-5 lg:mx-24">
                             <a href="/newBrand">Add new brand</a>
                         </li>
                         <li class="hover:font-bold cursor-pointer">
-                            <a href="/ Kada je USER korisnikeditCars">Edit cars</a>
+                            <a href="/editCars">Edit cars</a>
                         </li>
                         <li class="hover:font-bold cursor-pointer text-nowrap">
                             <a href="/allOrders">View pending orders</a>
