update styling for contactPage

--- a/views/partials/contactPage.ejs
+++ b/views/partials/contactPage.ejs
@@ -12,8 +12,8 @@ xs:mt-80 sm:mt-20 lg:mt-0">
     </p>
     <form action="" class="my-20 flex flex-col gap-10 xs:max-xl:items-center
     xs:w-3/4 md:w-2/3">
-        <div class="flex gap-10 xs:flex-col md:flex-row w-2/3 mx-auto">
-            <div class="inputContact xs:w-full md:w-2/3 mx-auto 
+        <div class="flex gap-10 xs:flex-col md:flex-row w-full mx-auto">
+            <div class="inputContact xs:w-full md:w-full mx-auto 
             xs:placeholder:text-sm">
                 <label for="email">Email</label>
                 <input required class="p-3 border-2 border-primary 
